# ResolveAI

./: README.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt  run_quick_migration.py  start_server.ps1  test_api_connection.py  test_auth_setup.py  test_user_creation.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/agents/: action_agent.py  assessment_agent.py  base_agent.py  habit_agent.py  negotiation_agent.py  optimization_agent.py  orchestrator.py
backend/app/core/: errors.py  openai_client.py  opik_tracing.py  security.py  validators.py
backend/app/db/migrations/: 001_init.sql  002_indexes.sql  003_rls.sql  004_add_debt_paid_off.sql
backend/app/db/repositories/: debt_repo.py  job_repo.py  payment_repo.py  plan_repo.py  user_repo.py
backend/app/models/: debt.py  job.py  payment.py  plan.py  upload.py  user.py
backend/app/routers/: auth.py  debts.py  health.py  jobs.py  payments.py  plans.py  uploads.py
backend/app/services/: debt_service.py  encryption_service.py  job_handlers.py  job_service.py  ocr_service.py  optimization_service.py  payment_service.py  plan_service.py  supabase_service.py
backend/scripts/: run_migrations.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js
frontend/public/: clear-auth.html
frontend/src/: App.tsx  index.css
specs/1-debt-freedom-coach/: data-model.md  plan.md  quickstart.md  spec.md  (+1 more)
(+59 files in other folders)
